parser/tests/snapshots/parser__empty_ruleset_1.snap
---
created: "2019-08-18T07:25:09.517111Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        RuleSet(
            RuleSet {
                identifier: "a",
                items: [],
            },
        ),
    ],
}
