parser/tests/snapshots/parser__empty_ruleset_2.snap
---
created: "2019-08-18T07:26:40.634840Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: doc
---
Document {
    items: [
        RuleSet(
            RuleSet {
                identifier: "a",
                items: [
                    RuleSet(
                        RuleSet {
                            identifier: "b",
                            items: [],
                        },
                    ),
                ],
            },
        ),
    ],
}
