parser/tests/snapshots/parser__garbage_doc_1.snap
---
created: "2019-08-18T08:03:48.560797Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: "format!(\"{}\" , e)"
---
Error: 0: at line 0:
something
         ^
expected ':', found 


1: at line 0, in Declaration:
something
^


