parser/tests/snapshots/parser__garbage_hex_value_3.snap
---
created: "2019-08-18T09:04:38.567403Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: "format!(\"{}\" , e)"
---
Error: 0: at line 0:
a: #ffffff 33?
           ^
expected '\n', found 3


