parser/tests/snapshots/parser__typos_in_color_sets_2.snap
---
created: "2019-08-18T08:16:56.419774Z"
creator: insta@0.10.1
source: parser/tests/parser.rs
expression: "format!(\"{}\" , e)"
---
Error: 0: at line 1:
    a: (light: #ff00ff 30%; dark: #00ff00)
                          ^
expected ',', found ;

1: at line 1, in ColorSet:
    a: (light: #ff00ff 30%; dark: #00ff00)
       ^

2: at line 1, in Declaration:
    a: (light: #ff00ff 30%; dark: #00ff00)
    ^


